revert invalid """ to "

--- a/example/extract/extract_md.ipynb
+++ b/example/extract/extract_md.ipynb
@@ -26,9 +26,9 @@
     "import sys\n",
     "import pprint\n",
     "\n",
-    "sys.path.append(\"\"\".\"\"\")\n",
-    "sys.path.append(\"\"\"..\"\"\")\n",
-    "sys.path.append(\"\"\"../..\"\"\")"
+    "sys.path.append(\".\")\n",
+    "sys.path.append(\"..\")\n",
+    "sys.path.append(\"../..\")"
    ]
   },
   {
@@ -83,7 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = [{\"\"\"filename\"\"\": \"\"\"./data/test.md\"\"\"}]"
+    "data = [{\"filename\": \"./data/test.md\"}]"
    ]
   },
   {
