--- a/example/extract/extract_pdf.ipynb
+++ b/example/extract/extract_pdf.ipynb
@@ -45,9 +45,9 @@
     "\n",
     "import sys\n",
     "\n",
-    "sys.path.append(\"\"\".\"\"\")\n",
-    "sys.path.append(\"\"\"..\"\"\")\n",
-    "sys.path.append(\"\"\"../..\"\"\")"
+    "sys.path.append(\".\")\n",
+    "sys.path.append(\"..\")\n",
+    "sys.path.append(\"../..\")"
    ]
   },
   {
@@ -94,8 +94,8 @@
    "outputs": [],
    "source": [
     "dir_cur = os.getcwd()\n",
-    "pdf_file = \"\"\"1408.5882_page-1.pdf\"\"\"\n",
-    "input_file = os.path.join(f\"\"\"{dir_cur}/data/raw_input/\"\"\", pdf_file)"
+    "pdf_file = \"1408.5882_page-1.pdf\"\n",
+    "input_file = os.path.join(f\"{dir_cur}/data/raw_input/\", pdf_file)"
    ]
   },
   {
@@ -154,12 +154,12 @@
    ],
    "source": [
     "data = [\n",
-    "    {\"\"\"filename\"\"\": input_file},\n",
+    "    {\"filename\": input_file},\n",
     "]\n",
     "\n",
     "config = ExtractPDFConfig(\n",
     "    model_config=NougatModelConfig(\n",
-    "        model_name = \"\"\"0.1.0-small\"\"\",\n",
+    "        model_name = \"0.1.0-small\",\n",
     "        batch_size = 1 # When batch_size>1, nougat will run on CUDA, otherwise it will run on CPU\n",
     "    ),\n",
     "    splitter=PARAGRAPH_SPLITTER,\n",
@@ -265,7 +265,7 @@
     "config = TransformOpenAIConfig(\n",
     "    prompt_template=guided_prompt,\n",
     "    model_config=OpenAIModelConfig(\n",
-    "        response_format={\"\"\"type\"\"\": \"\"\"json_object\"\"\"}\n",
+    "        response_format={\"type\": \"json_object\"}\n",
     "    ),\n",
     ")\n",
     "transform_client = TransformClient(config)"
@@ -532,7 +532,7 @@
    "outputs": [],
    "source": [
     "output_df = df[['Question', 'Answer']]\n",
-    "output_df.to_csv(\"\"\"data/output/CNN_pdf_QApairs.csv\"\"\", index=False)"
+    "output_df.to_csv(\"data/output/CNN_pdf_QApairs.csv\", index=False)"
    ]
   },
   {
