--- a/example/extract/extract_txt.ipynb
+++ b/example/extract/extract_txt.ipynb
@@ -12,9 +12,9 @@
     "import sys\n",
     "import pprint\n",
     "\n",
-    "sys.path.append(\"\"\".\"\"\")\n",
-    "sys.path.append(\"\"\"..\"\"\")\n",
-    "sys.path.append(\"\"\"../..\"\"\")"
+    "sys.path.append(\".\")\n",
+    "sys.path.append(\"..\")\n",
+    "sys.path.append(\"../..\")"
    ]
   },
   {
@@ -60,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = [{\"\"\"filename\"\"\": \"\"\"./data/test.txt\"\"\"}]"
+    "data = [{\"filename\": \"./data/test.txt\"}]"
    ]
   },
   {
@@ -155,7 +155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "graph = Viz.to_digraph(output[0][\"\"\"root\"\"\"])"
+    "graph = Viz.to_digraph(output[0][\"root\"])"
    ]
   },
   {
