--- a/example/llm/sagemaker_deploy.ipynb
+++ b/example/llm/sagemaker_deploy.ipynb
@@ -99,7 +99,7 @@
    "source": [
     "session = boto3.Session(profile_name='default')\n",
     "sm_session = sagemaker.session.Session(boto_session=session)\n",
-    "sm_runtime_client = session.client(\"\"\"sagemaker-runtime\"\"\")"
+    "sm_runtime_client = session.client(\"sagemaker-runtime\")"
    ]
   },
   {
@@ -126,23 +126,23 @@
     "    Returns:\n",
     "    str: The ARN (Amazon Resource Name) of the created IAM role.\n",
     "    \"\"\"\n",
-    "    iam_client = session.client(\"\"\"iam\"\"\")\n",
+    "    iam_client = session.client(\"iam\")\n",
     "\n",
     "    # Check if role already exists\n",
     "    try:\n",
     "        get_role_response = iam_client.get_role(RoleName=role_name)\n",
-    "        print(f\"\"\"IAM Role '{role_name}' already exists. Skipping creation.\"\"\")\n",
-    "        return get_role_response[\"\"\"Role\"\"\"][\"\"\"Arn\"\"\"]\n",
+    "        print(f\"IAM Role '{role_name}' already exists. Skipping creation.\")\n",
+    "        return get_role_response[\"Role\"][\"Arn\"]\n",
     "    except iam_client.exceptions.NoSuchEntityException:\n",
     "        pass\n",
     "\n",
     "    assume_role_policy_document = {\n",
-    "        \"\"\"Version\"\"\": \"\"\"2012-10-17\"\"\",\n",
-    "        \"\"\"Statement\"\"\": [\n",
+    "        \"Version\": \"2012-10-17\",\n",
+    "        \"Statement\": [\n",
     "            {\n",
-    "                \"\"\"Effect\"\"\": \"\"\"Allow\"\"\",\n",
-    "                \"\"\"Principal\"\"\": {\"\"\"Service\"\"\": \"\"\"sagemaker.amazonaws.com\"\"\"},\n",
-    "                \"\"\"Action\"\"\": \"\"\"sts:AssumeRole\"\"\",\n",
+    "                \"Effect\": \"Allow\",\n",
+    "                \"Principal\": {\"Service\": \"sagemaker.amazonaws.com\"},\n",
+    "                \"Action\": \"sts:AssumeRole\",\n",
     "            }\n",
     "        ],\n",
     "    }\n",
@@ -154,17 +154,17 @@
     "\n",
     "    attach_policy_response = iam_client.attach_role_policy(\n",
     "        RoleName=role_name,\n",
-    "        PolicyArn=\"\"\"arn:aws:iam::aws:policy/AmazonSageMakerFullAccess\"\"\",\n",
+    "        PolicyArn=\"arn:aws:iam::aws:policy/AmazonSageMakerFullAccess\",\n",
     "    )\n",
     "\n",
     "    attach_policy_response = iam_client.attach_role_policy(\n",
     "        RoleName=role_name,\n",
-    "        PolicyArn=\"\"\"arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess\"\"\",\n",
+    "        PolicyArn=\"arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess\",\n",
     "    )\n",
     "\n",
-    "    print(f\"\"\"IAM Role '{role_name}' created successfully!\"\"\")\n",
+    "    print(f\"IAM Role '{role_name}' created successfully!\")\n",
     "\n",
-    "    role_arn = create_role_response[\"\"\"Role\"\"\"][\"\"\"Arn\"\"\"]\n",
+    "    role_arn = create_role_response[\"Role\"][\"Arn\"]\n",
     "\n",
     "    return role_arn"
    ]
@@ -190,7 +190,7 @@
     }
    ],
    "source": [
-    "role_name = f\"\"\"UniflowSageMakerEndpointRole-v1\"\"\"\n",
+    "role_name = f\"UniflowSageMakerEndpointRole-v1\"\n",
     "role_arn = create_role(role_name)"
    ]
   },
@@ -221,26 +221,26 @@
     "    \"\"\"\n",
     "\n",
     "    # retrieve the llm image uri\n",
-    "    llm_image = get_huggingface_llm_image_uri(\"\"\"huggingface\"\"\", version=\"\"\"1.0.3\"\"\")\n",
+    "    llm_image = get_huggingface_llm_image_uri(\"huggingface\", version=\"1.0.3\")\n",
     "\n",
     "    # print ecr image uri\n",
-    "    print(f\"\"\"llm image uri: {llm_image}\"\"\")\n",
+    "    print(f\"llm image uri: {llm_image}\")\n",
     "\n",
     "    # sagemaker config\n",
-    "    instance_type = \"\"\"ml.g5.4xlarge\"\"\"\n",
+    "    instance_type = \"ml.g5.4xlarge\"\n",
     "    number_of_gpu = 1\n",
     "    health_check_timeout = 300\n",
     "\n",
     "    # TGI config\n",
     "    config = {\n",
-    "        \"\"\"HF_MODEL_ID\"\"\": \"\"\"tiiuae/falcon-7b-instruct\"\"\",  # model_id from hf.co/models\n",
-    "        \"\"\"SM_NUM_GPUS\"\"\": json.dumps(number_of_gpu),  # Number of GPU used per replica\n",
-    "        \"\"\"MAX_INPUT_LENGTH\"\"\": json.dumps(1024),  # Max length of input text\n",
-    "        \"\"\"MAX_TOTAL_TOKENS\"\"\": json.dumps(\n",
+    "        \"HF_MODEL_ID\": \"tiiuae/falcon-7b-instruct\",  # model_id from hf.co/models\n",
+    "        \"SM_NUM_GPUS\": json.dumps(number_of_gpu),  # Number of GPU used per replica\n",
+    "        \"MAX_INPUT_LENGTH\": json.dumps(1024),  # Max length of input text\n",
+    "        \"MAX_TOTAL_TOKENS\": json.dumps(\n",
     "            2048\n",
     "        ),  # Max length of the generation (including input text)\n",
-    "        # \"\"\"HF_MODEL_QUANTIZE\"\"\": \"\"\"bitsandbytes\"\"\",  # comment in to quantize\n",
-    "        \"\"\"HF_MODEL_TRUST_REMOTE_CODE\"\"\": json.dumps(True),\n",
+    "        # \"HF_MODEL_QUANTIZE\": \"bitsandbytes\",  # comment in to quantize\n",
+    "        \"HF_MODEL_TRUST_REMOTE_CODE\": json.dumps(True),\n",
     "    }\n",
     "\n",
     "    # create HuggingFaceModel\n",
@@ -256,7 +256,7 @@
     "        container_startup_health_check_timeout=health_check_timeout,  # 5 minutes to be able to load the model\n",
     "        endpoint_name=endpoint_name,\n",
     "    )\n",
-    "    print(f\"\"\"sagemaker endpoint name: {endpoint_name}\"\"\")\n",
+    "    print(f\"sagemaker endpoint name: {endpoint_name}\")\n",
     "    return endpoint_name"
    ]
   },
@@ -267,9 +267,9 @@
    "outputs": [],
    "source": [
     "now = datetime.now()\n",
-    "date_time = now.strftime(\"\"\"%Y-%m-%d-%H-%M-%S\"\"\")\n",
+    "date_time = now.strftime(\"%Y-%m-%d-%H-%M-%S\")\n",
     "\n",
-    "endpoint_name = f\"\"\"falcon-7b-{date_time}\"\"\"\n",
+    "endpoint_name = f\"falcon-7b-{date_time}\"\n",
     "deploy(role_arn, endpoint_name)"
    ]
   },
@@ -300,23 +300,23 @@
     "    \"\"\"\n",
     "\n",
     "    parameters = {\n",
-    "        \"\"\"do_sample\"\"\": True,\n",
-    "        \"\"\"top_p\"\"\": 0.9,\n",
-    "        \"\"\"temperature\"\"\": 0.8,\n",
-    "        \"\"\"max_new_tokens\"\"\": 1024,\n",
-    "        \"\"\"repetition_penalty\"\"\": 1.03,\n",
-    "        \"\"\"stop\"\"\": [\"\"\"\\nUser:\"\"\",\"\"\"<|endoftext|>\"\"\",\"\"\"</s>\"\"\"]\n",
+    "        \"do_sample\": True,\n",
+    "        \"top_p\": 0.9,\n",
+    "        \"temperature\": 0.8,\n",
+    "        \"max_new_tokens\": 1024,\n",
+    "        \"repetition_penalty\": 1.03,\n",
+    "        \"stop\": [\"\\nUser:\",\"<|endoftext|>\",\"</s>\"]\n",
     "    }\n",
     "\n",
-    "    prompt = f\"\"\"You are an helpful Assistant, called Falcon. \\n\\nUser: {input_text}\\nFalcon:\"\"\"\n",
+    "    prompt = f\"You are an helpful Assistant, called Falcon. \\n\\nUser: {input_text}\\nFalcon:\"\n",
     "\n",
-    "    payload = json.dumps({\"\"\"inputs\"\"\": prompt, \"\"\"parameters\"\"\": parameters})\n",
+    "    payload = json.dumps({\"inputs\": prompt, \"parameters\": parameters})\n",
     "\n",
     "    response = sm_runtime_client.invoke_endpoint(\n",
-    "        EndpointName=endpoint_name, ContentType=\"\"\"application/json\"\"\", Body=payload\n",
+    "        EndpointName=endpoint_name, ContentType=\"application/json\", Body=payload\n",
     "    )\n",
     "\n",
-    "    return json.loads(response[\"\"\"Body\"\"\"].read().decode(\"\"\"utf-8\"\"\"))"
+    "    return json.loads(response[\"Body\"].read().decode(\"utf-8\"))"
    ]
   },
   {
@@ -333,7 +333,7 @@
     }
    ],
    "source": [
-    "input_text = \"\"\"Tell me about Amazon SageMaker\"\"\"\n",
+    "input_text = \"Tell me about Amazon SageMaker\"\n",
     "response = invoke_endpoint(endpoint_name, input_text)\n",
     "print(response)"
    ]
