--- a/example/transform/model.ipynb
+++ b/example/transform/model.ipynb
@@ -169,7 +169,7 @@
    "outputs": [],
    "source": [
     "config = TransformConfig(\n",
-    "    flow_name=\"\"\"TransformOpenAIFlow\"\"\",\n",
+    "    flow_name=\"TransformOpenAIFlow\",\n",
     "    model_config=OpenAIModelConfig()\n",
     ")\n",
     "client = TransformClient(config)"
