--- a/example/transform/openai_jupyter_notebook_QA.ipynb
+++ b/example/transform/openai_jupyter_notebook_QA.ipynb
@@ -92,7 +92,7 @@
    "outputs": [],
    "source": [
     "dir_cur = os.getcwd()\n",
-    "jupyter_notebook_file = \"\"\"model.ipynb\"\"\"\n",
+    "jupyter_notebook_file = \"model.ipynb\"\n",
     "input_file = os.path.join(f\"{dir_cur}\", jupyter_notebook_file)"
    ]
   },
@@ -164,7 +164,7 @@
     "        # Check if the string starts with \"'markdown' cell: '\"\n",
     "        if s.startswith(markdown_symbol):\n",
     "            # Split the string by the specified pattern ', '\n",
-    "            parts = re.split(\"\"\"', '\"\"\" , s)\n",
+    "            parts = re.split(\"', '\" , s)\n",
     "\n",
     "            # Process each part\n",
     "            new_list = []\n",
@@ -184,7 +184,7 @@
     "            # Add the processed parts to the main list\n",
     "            processed.extend(new_list)\n",
     "\n",
-    "        # For strings starting with \"\"\"'code' cell\"\"\", append them to the last string\n",
+    "        # For strings starting with \"'code' cell\", append them to the last string\n",
     "        elif s.startswith(code_symbol):\n",
     "            processed[-1] += s\n",
     "        else:\n",
@@ -280,8 +280,8 @@
     }
    ],
    "source": [
-    "markdown_symbol = \"\"\"\\'markdown\\' cell: \\'\"\"\"\n",
-    "code_symbol = \"\"\"\\'code\\' cell: \\'\"\"\"\n",
+    "markdown_symbol = \"\\'markdown\\' cell: \\'\"\n",
+    "code_symbol = \"\\'code\\' cell: \\'\"\n",
     "content_splited_by_header =  split_string_based_on_markdown_header(raw_content[0].page_content,\n",
     "                                               markdown_symbol=markdown_symbol,\n",
     "                                               code_symbol=code_symbol)\n",
