--- a/example/transform/openai_pdf_source_10k_QA.ipynb
+++ b/example/transform/openai_pdf_source_10k_QA.ipynb
@@ -160,7 +160,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pdf_file = \"\"\"nike-10k-2023.pdf\"\"\""
+    "pdf_file = \"nike-10k-2023.pdf\""
    ]
   },
   {
