--- a/example/transform/self_instruct_custom_html_source.ipynb
+++ b/example/transform/self_instruct_custom_html_source.ipynb
@@ -94,7 +94,7 @@
     "#html_file = \"do_things_that_dont_scale.html\" #from http://paulgraham.com/ds.html\n",
     "#html_file = \"makers_schedule_managers_schedule.html\" #from http://www.paulgraham.com/makersschedule.html\n",
     "#html_file = \"life_is_short.html\" #http://www.paulgraham.com/vb.html\n",
-    "html_file = \"\"\"22.11_information-theory.html\"\"\""
+    "html_file = \"22.11_information-theory.html\""
    ]
   },
   {
@@ -113,7 +113,7 @@
    "outputs": [],
    "source": [
     "dir_cur = os.getcwd()\n",
-    "input_file = os.path.join(f\"\"\"{dir_cur}/data/raw_input/\"\"\", html_file)"
+    "input_file = os.path.join(f\"{dir_cur}/data/raw_input/\", html_file)"
    ]
   },
   {
