--- a/example/transform/self_instruct_html_source.ipynb
+++ b/example/transform/self_instruct_html_source.ipynb
@@ -39,9 +39,9 @@
     "\n",
     "import sys\n",
     "\n",
-    "sys.path.append(\"\"\".\"\"\")\n",
-    "sys.path.append(\"\"\"..\"\"\")\n",
-    "sys.path.append(\"\"\"../..\"\"\")"
+    "sys.path.append(\".\")\n",
+    "sys.path.append(\"..\")\n",
+    "sys.path.append(\"../..\")"
    ]
   },
   {
@@ -93,7 +93,7 @@
     "#html_file = \"do_things_that_dont_scale.html\" #from http://paulgraham.com/ds.html\n",
     "#html_file = \"makers_schedule_managers_schedule.html\" #from http://www.paulgraham.com/makersschedule.html\n",
     "#html_file = \"life_is_short.html\" #http://www.paulgraham.com/vb.html\n",
-    "html_file = \"\"\"22.11_information-theory.html\"\"\""
+    "html_file = \"22.11_information-theory.html\""
    ]
   },
   {
@@ -112,7 +112,7 @@
    "outputs": [],
    "source": [
     "dir_cur = os.getcwd()\n",
-    "input_file = os.path.join(f\"\"\"{dir_cur}/data/raw_input/\"\"\", html_file)"
+    "input_file = os.path.join(f\"{dir_cur}/data/raw_input/\", html_file)"
    ]
   },
   {
@@ -304,8 +304,8 @@
     "responses = []\n",
     "\n",
     "prompt_keys = [\n",
-    "    \"\"\"question\"\"\",\n",
-    "    \"\"\"answer\"\"\"\n",
+    "    \"question\",\n",
+    "    \"answer\"\n",
     "]\n",
     "\n",
     "for item in output:\n",
@@ -315,13 +315,13 @@
     "    segments = [\n",
     "        segment.strip(' :\"\\n,}{') for segment in re.split(pattern, d.lower())\n",
     "    ]\n",
-    "    segments = d.split(\"\"\"\\n\"\"\")\n",
+    "    segments = d.split(\"\\n\")\n",
     "\n",
     "    result = dict()\n",
     "    result.update(\n",
     "        {\n",
-    "            prompt_keys[0]: segments[-2].strip(prompt_keys[0]+\"\"\":\"\"\"),\n",
-    "            prompt_keys[1]: segments[-1].strip(prompt_keys[1]+\"\"\":\"\"\"),\n",
+    "            prompt_keys[0]: segments[-2].strip(prompt_keys[0]+\":\"),\n",
+    "            prompt_keys[1]: segments[-1].strip(prompt_keys[1]+\":\"),\n",
     "        }\n",
     "    )\n",
     "    responses.append(result)\n",
