--- a/example/viz/graph_render.ipynb
+++ b/example/viz/graph_render.ipynb
@@ -18,9 +18,9 @@
     "\n",
     "import sys\n",
     "\n",
-    "sys.path.append(\"\"\".\"\"\")\n",
-    "sys.path.append(\"\"\"..\"\"\")\n",
-    "sys.path.append(\"\"\"../..\"\"\")"
+    "sys.path.append(\".\")\n",
+    "sys.path.append(\"..\")\n",
+    "sys.path.append(\"../..\")"
    ]
   },
   {
