Update ipynb to remove AWS key and bump version to 0.0.17

--- a/example/extract/extract_txt_from_s3.ipynb
+++ b/example/extract/extract_txt_from_s3.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,9 +35,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lingjiekong/anaconda3/envs/uniflow/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -55,7 +63,7 @@
        " 'rater': ['RaterFlow']}"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,26 +95,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "env: AWS_ACCESS_KEY_ID=a\n",
-      "env: AWS_SECRET_ACCESS_KEY=b\n",
-      "env: AWS_REGION=us-west-2\n",
-      "aws access key id is a\n",
-      "aws secret access key is b\n",
-      "aws region is us-west-2\n"
+      "aws access key id is None)\n",
+      "aws secret access key is None\n",
+      "aws region is None\n"
      ]
     }
    ],
    "source": [
-    "%env AWS_ACCESS_KEY_ID=a\n",
-    "%env AWS_SECRET_ACCESS_KEY=b\n",
-    "%env AWS_REGION=us-west-2\n",
+    "# %env AWS_ACCESS_KEY_ID='your_access_key'\n",
+    "# %env AWS_SECRET_ACCESS_KEY='your_secret_key'\n",
+    "# %env AWS_REGION='your_region'\n",
     "\n",
     "print(f\"aws access key id is {os.environ.get('AWS_ACCESS_KEY_ID')})\")\n",
     "print(f\"aws secret access key is {os.environ.get('AWS_SECRET_ACCESS_KEY')}\")\n",
