--- a/example/pipeline/pipeline_s3_txt.ipynb
+++ b/example/pipeline/pipeline_s3_txt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
        " 'rater': ['RaterFlow']}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,16 +80,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "aws access key id is AKIAYKCELRQZJVMATYNO\n",
-      "aws secret access key is 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\n",
-      "aws region is us-west-2\n"
+      "aws access key id is None\n",
+      "aws secret access key is None\n",
+      "aws region is None\n"
      ]
     }
    ],
