expand_reduce_flow results stored to database

--- a/exam/server_client.ipynb
+++ b/exam/server_client.ipynb
@@ -92,16 +92,16 @@
       "GET ExpandReduceFlow <class 'uniflow.flow.transform.expand_reduce_flow.ExpandReduceFlow'>\n",
       "EXPAND {'How are you?': 'Fine.', 'Who are you?': 'I am Bob.'}\n",
       "HALF {'How are you?': 'Fine.'} & {'Who are you?': 'I am Bob.'}\n",
-      "[<uniflow.node.Node object at 0x7f43bf948d90>]\n",
+      "[<uniflow.node.Node object at 0x7fd3d90ec130>]\n",
       "EXPAND {'Where are you?': 'I am at home.', 'What are you doing?': 'Coding.'}\n",
       "HALF {'Where are you?': 'I am at home.'} & {'What are you doing?': 'Coding.'}\n",
-      "[<uniflow.node.Node object at 0x7f43bf955130>]\n"
+      "[<uniflow.node.Node object at 0x7fd3d90ec4c0>]\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9c3402bce10a4450bc2186d8792dc050",
+       "model_id": "8a9a96c2870540b8af3965829b932052",
        "version_major": 2,
        "version_minor": 0
       },
@@ -128,9 +128,9 @@
      "data": {
       "text/plain": [
        "[{'output': [[{'How are you? Who are you?': 'Fine. I am Bob.'}]],\n",
-       "  'root': <uniflow.node.Node at 0x7f43bf948250>},\n",
+       "  'root': <uniflow.node.Node at 0x7fd3d90dbe80>},\n",
        " {'output': [[{'Where are you? What are you doing?': 'I am at home. Coding.'}]],\n",
-       "  'root': <uniflow.node.Node at 0x7f43ac2f6a00>}]"
+       "  'root': <uniflow.node.Node at 0x7fd3d448d460>}]"
       ]
      },
      "execution_count": 5,
@@ -222,7 +222,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f43bf9483a0>"
+       "<graphviz.graphs.Digraph at 0x7fd3d90db5e0>"
       ]
      },
      "metadata": {},
