update checkpoint code

--- a/example/transform/huggingface_pdf_source_irs_QA.ipynb
+++ b/example/transform/huggingface_pdf_source_irs_QA.ipynb
@@ -91,15 +91,12 @@
     "import os\n",
     "\n",
     "import pandas as pd\n",
-    "from dotenv import load_dotenv\n",
     "\n",
     "from uniflow.flow.client import ExtractClient, TransformClient\n",
     "from uniflow.flow.config import ExtractPDFConfig, TransformQAHuggingFaceJsonFormatConfig\n",
     "from uniflow.op.extract.split.constants import MARKDOWN_HEADER_SPLITTER\n",
     "from uniflow.op.model.model_config import HuggingfaceModelConfig, NougatModelConfig\n",
-    "from uniflow.op.prompt import PromptTemplate, Context\n",
-    "\n",
-    "load_dotenv()"
+    "from uniflow.op.prompt import PromptTemplate, Context"
    ]
   },
   {
@@ -905,38 +902,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df.to_pickle('my_dataframe.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "c418af0c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df_new = pd.read_pickle('my_dataframe.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "8ae6f985",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df_new"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "c0774779",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df = df_new\n",
-    "# df"
+    "df.to_pickle('my_dataframe.pkl')"
    ]
   },
   {
