Install uniflow pyproject.toml dependencies in 10k summary notebook

--- a/example/transform/openai_pdf_source_10k_summary.ipynb
+++ b/example/transform/openai_pdf_source_10k_summary.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,60 +46,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Looking in indexes: https://pypi.tuna.tsinghua.edu.cn/simple\n",
-      "Requirement already satisfied: langchain in d:\\anaconda\\envs\\uniflow\\lib\\site-packages (0.0.351)\n",
-      "Requirement already satisfied: pandas in d:\\anaconda\\envs\\uniflow\\lib\\site-packages (2.1.4)\n",
-      "Requirement already satisfied: pypdf in d:\\anaconda\\envs\\uniflow\\lib\\site-packages (3.17.3)\n",
-      "Requirement already satisfied: PyYAML>=5.3 in d:\\anaconda\\envs\\uniflow\\lib\\site-packages (from langchain) (6.0.1)\n",
-      "Requirement already satisfied: SQLAlchemy<3,>=1.4 in d:\\anaconda\\envs\\uniflow\\lib\\site-packages (from langchain) (2.0.23)\n",
-      "Requirement already satisfied: aiohttp<4.0.0,>=3.8.3 in d:\\anaconda\\envs\\uniflow\\lib\\site-packages (from langchain) (3.9.1)\n",
-      "Requirement already satisfied: async-timeout<5.0.0,>=4.0.0 in d:\\anaconda\\envs\\uniflow\\lib\\site-packages (from langchain) (4.0.3)\n",
-      "Requirement already satisfied: dataclasses-json<0.7,>=0.5.7 in d:\\anaconda\\envs\\uniflow\\lib\\site-packages (from langchain) (0.6.3)\n",
-      "Requirement already satisfied: jsonpatch<2.0,>=1.33 in d:\\anaconda\\envs\\uniflow\\lib\\site-packages (from langchain) (1.33)\n",
-      "Requirement already satisfied: langchain-community<0.1,>=0.0.2 in d:\\anaconda\\envs\\uniflow\\lib\\site-packages (from langchain) (0.0.4)\n",
-      "Requirement already satisfied: langchain-core<0.2,>=0.1 in d:\\anaconda\\envs\\uniflow\\lib\\site-packages (from langchain) (0.1.2)\n",
-      "Requirement already satisfied: langsmith<0.1.0,>=0.0.70 in d:\\anaconda\\envs\\uniflow\\lib\\site-packages (from langchain) (0.0.72)\n",
-      "Requirement already satisfied: numpy<2,>=1 in d:\\anaconda\\envs\\uniflow\\lib\\site-packages (from langchain) (1.26.2)\n",
-      "Requirement already satisfied: pydantic<3,>=1 in d:\\anaconda\\envs\\uniflow\\lib\\site-packages (from langchain) (2.5.2)\n",
-      "Requirement already satisfied: requests<3,>=2 in d:\\anaconda\\envs\\uniflow\\lib\\site-packages (from langchain) (2.31.0)\n",
-      "Requirement already satisfied: tenacity<9.0.0,>=8.1.0 in d:\\anaconda\\envs\\uniflow\\lib\\site-packages (from langchain) (8.2.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in d:\\anaconda\\envs\\uniflow\\lib\\site-packages (from pandas) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in d:\\anaconda\\envs\\uniflow\\lib\\site-packages (from pandas) (2023.3.post1)\n",
-      "Requirement already satisfied: tzdata>=2022.1 in d:\\anaconda\\envs\\uniflow\\lib\\site-packages (from pandas) (2023.3)\n",
-      "Requirement already satisfied: attrs>=17.3.0 in d:\\anaconda\\envs\\uniflow\\lib\\site-packages (from aiohttp<4.0.0,>=3.8.3->langchain) (23.1.0)\n",
-      "Requirement already satisfied: multidict<7.0,>=4.5 in d:\\anaconda\\envs\\uniflow\\lib\\site-packages (from aiohttp<4.0.0,>=3.8.3->langchain) (6.0.4)\n",
-      "Requirement already satisfied: yarl<2.0,>=1.0 in d:\\anaconda\\envs\\uniflow\\lib\\site-packages (from aiohttp<4.0.0,>=3.8.3->langchain) (1.9.4)\n",
-      "Requirement already satisfied: frozenlist>=1.1.1 in d:\\anaconda\\envs\\uniflow\\lib\\site-packages (from aiohttp<4.0.0,>=3.8.3->langchain) (1.4.1)\n",
-      "Requirement already satisfied: aiosignal>=1.1.2 in d:\\anaconda\\envs\\uniflow\\lib\\site-packages (from aiohttp<4.0.0,>=3.8.3->langchain) (1.3.1)\n",
-      "Requirement already satisfied: marshmallow<4.0.0,>=3.18.0 in d:\\anaconda\\envs\\uniflow\\lib\\site-packages (from dataclasses-json<0.7,>=0.5.7->langchain) (3.20.1)\n",
-      "Requirement already satisfied: typing-inspect<1,>=0.4.0 in d:\\anaconda\\envs\\uniflow\\lib\\site-packages (from dataclasses-json<0.7,>=0.5.7->langchain) (0.9.0)\n",
-      "Requirement already satisfied: jsonpointer>=1.9 in d:\\anaconda\\envs\\uniflow\\lib\\site-packages (from jsonpatch<2.0,>=1.33->langchain) (2.4)\n",
-      "Requirement already satisfied: anyio<5,>=3 in d:\\anaconda\\envs\\uniflow\\lib\\site-packages (from langchain-core<0.2,>=0.1->langchain) (4.2.0)\n",
-      "Requirement already satisfied: packaging<24.0,>=23.2 in d:\\anaconda\\envs\\uniflow\\lib\\site-packages (from langchain-core<0.2,>=0.1->langchain) (23.2)\n",
-      "Requirement already satisfied: annotated-types>=0.4.0 in d:\\anaconda\\envs\\uniflow\\lib\\site-packages (from pydantic<3,>=1->langchain) (0.6.0)\n",
-      "Requirement already satisfied: pydantic-core==2.14.5 in d:\\anaconda\\envs\\uniflow\\lib\\site-packages (from pydantic<3,>=1->langchain) (2.14.5)\n",
-      "Requirement already satisfied: typing-extensions>=4.6.1 in d:\\anaconda\\envs\\uniflow\\lib\\site-packages (from pydantic<3,>=1->langchain) (4.9.0)\n",
-      "Requirement already satisfied: six>=1.5 in d:\\anaconda\\envs\\uniflow\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in d:\\anaconda\\envs\\uniflow\\lib\\site-packages (from requests<3,>=2->langchain) (3.3.2)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in d:\\anaconda\\envs\\uniflow\\lib\\site-packages (from requests<3,>=2->langchain) (3.6)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in d:\\anaconda\\envs\\uniflow\\lib\\site-packages (from requests<3,>=2->langchain) (2.1.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in d:\\anaconda\\envs\\uniflow\\lib\\site-packages (from requests<3,>=2->langchain) (2023.11.17)\n",
-      "Requirement already satisfied: greenlet!=0.4.17 in d:\\anaconda\\envs\\uniflow\\lib\\site-packages (from SQLAlchemy<3,>=1.4->langchain) (3.0.2)\n",
-      "Requirement already satisfied: sniffio>=1.1 in d:\\anaconda\\envs\\uniflow\\lib\\site-packages (from anyio<5,>=3->langchain-core<0.2,>=0.1->langchain) (1.3.0)\n",
-      "Requirement already satisfied: exceptiongroup>=1.0.2 in d:\\anaconda\\envs\\uniflow\\lib\\site-packages (from anyio<5,>=3->langchain-core<0.2,>=0.1->langchain) (1.2.0)\n",
-      "Requirement already satisfied: mypy-extensions>=0.3.0 in d:\\anaconda\\envs\\uniflow\\lib\\site-packages (from typing-inspect<1,>=0.4.0->dataclasses-json<0.7,>=0.5.7->langchain) (1.0.0)\n"
+      "\u001b[34mInstalling dependencies from lock file\u001b[39m\n",
+      "\n",
+      "\u001b[39;1mPackage operations\u001b[39;22m: \u001b[34m0\u001b[39m installs, \u001b[34m2\u001b[39m updates, \u001b[34m0\u001b[39m removals\n",
+      "\n",
+      "  \u001b[34;1m•\u001b[39;22m \u001b[39mUpdating \u001b[39m\u001b[36manyio\u001b[39m\u001b[39m (\u001b[39m\u001b[39;1m3.7.1\u001b[39;22m\u001b[39m -> \u001b[39m\u001b[39;1m4.2.0\u001b[39;22m\u001b[39m)\u001b[39m: \u001b[34mPending...\u001b[39m\n",
+      "  \u001b[34;1m•\u001b[39;22m \u001b[39mUpdating \u001b[39m\u001b[36mplatformdirs\u001b[39m\u001b[39m (\u001b[39m\u001b[39;1m3.11.0\u001b[39;22m\u001b[39m -> \u001b[39m\u001b[39;1m4.1.0\u001b[39;22m\u001b[39m)\u001b[39m: \u001b[34mPending...\u001b[39m\n",
+      "\u001b[1A\u001b[0J  \u001b[34;1m•\u001b[39;22m \u001b[39mUpdating \u001b[39m\u001b[36mplatformdirs\u001b[39m\u001b[39m (\u001b[39m\u001b[39;1m3.11.0\u001b[39;22m\u001b[39m -> \u001b[39m\u001b[39;1m4.1.0\u001b[39;22m\u001b[39m)\u001b[39m: \u001b[34mInstalling...\u001b[39m\n",
+      "\u001b[2A\u001b[0J  \u001b[34;1m•\u001b[39;22m \u001b[39mUpdating \u001b[39m\u001b[36mplatformdirs\u001b[39m\u001b[39m (\u001b[39m\u001b[39;1m3.11.0\u001b[39;22m\u001b[39m -> \u001b[39m\u001b[39;1m4.1.0\u001b[39;22m\u001b[39m)\u001b[39m: \u001b[34mInstalling...\u001b[39m\n",
+      "\u001b[1A\u001b[0J  \u001b[34;1m•\u001b[39;22m \u001b[39mUpdating \u001b[39m\u001b[36manyio\u001b[39m\u001b[39m (\u001b[39m\u001b[39;1m3.7.1\u001b[39;22m\u001b[39m -> \u001b[39m\u001b[39;1m4.2.0\u001b[39;22m\u001b[39m)\u001b[39m: \u001b[34mInstalling...\u001b[39m\n",
+      "  \u001b[34;1m•\u001b[39;22m \u001b[39mUpdating \u001b[39m\u001b[36mplatformdirs\u001b[39m\u001b[39m (\u001b[39m\u001b[39;1m3.11.0\u001b[39;22m\u001b[39m -> \u001b[39m\u001b[39;1m4.1.0\u001b[39;22m\u001b[39m)\u001b[39m: \u001b[34mInstalling...\u001b[39m\n",
+      "\u001b[1A\u001b[0J  \u001b[32;1m•\u001b[39;22m \u001b[39mUpdating \u001b[39m\u001b[36mplatformdirs\u001b[39m\u001b[39m (\u001b[39m\u001b[39;1m3.11.0\u001b[39;22m\u001b[39m -> \u001b[39m\u001b[32m4.1.0\u001b[39m\u001b[39m)\u001b[39m\n",
+      "\u001b[2A\u001b[0J  \u001b[32;1m•\u001b[39;22m \u001b[39mUpdating \u001b[39m\u001b[36mplatformdirs\u001b[39m\u001b[39m (\u001b[39m\u001b[39;1m3.11.0\u001b[39;22m\u001b[39m -> \u001b[39m\u001b[32m4.1.0\u001b[39m\u001b[39m)\u001b[39m\n",
+      "\u001b[1A\u001b[0J  \u001b[32;1m•\u001b[39;22m \u001b[39mUpdating \u001b[39m\u001b[36manyio\u001b[39m\u001b[39m (\u001b[39m\u001b[39;1m3.7.1\u001b[39;22m\u001b[39m -> \u001b[39m\u001b[32m4.2.0\u001b[39m\u001b[39m)\u001b[39m\n",
+      "  \u001b[32;1m•\u001b[39;22m \u001b[39mUpdating \u001b[39m\u001b[36mplatformdirs\u001b[39m\u001b[39m (\u001b[39m\u001b[39;1m3.11.0\u001b[39;22m\u001b[39m -> \u001b[39m\u001b[32m4.1.0\u001b[39m\u001b[39m)\u001b[39m\n"
      ]
     }
    ],
    "source": [
-    "!{sys.executable} -m pip install -q langchain pandas pypdf"
+    "!{sys.executable} -m pip install -q langchain pandas pypdf poetry\n",
+    "!poetry -C ../../ install --no-root # install uniflow dependencies"
    ]
   },
   {
