--- a/example/transform/nougat_huggingface_QAs.ipynb
+++ b/example/transform/nougat_huggingface_QAs.ipynb
@@ -7,6 +7,8 @@
    "source": [
     "# Generate QAs based no the target PDF extracted from `Nougat`\n",
     "\n",
+    "This package uses `nougat`, a tool for extracting information from specific PDF files. It also includes a feature that uses OpenAI's language models to check the accuracy of this extracted information. Additionally, the package uses `uniflow` to create questions and answers based on the information taken from the PDFs.\n",
+    "\n",
     "### Before running the code\n",
     "\n",
     "You will need to `uniflow` conda environment to run this notebook. You can set up the environment following the instruction: https://github.com/CambioML/uniflow/tree/main#installation.\n",
