--- a/example/transform/nougat_huggingface_QAs.ipynb
+++ b/example/transform/nougat_huggingface_QAs.ipynb
@@ -5,7 +5,7 @@
    "id": "23393b1c-b26c-4372-ba4e-58cb2033dfda",
    "metadata": {},
    "source": [
-    "# Generate QAs based no the target PDF extracted from `Nougat`\n",
+    "# Generate QAs based on the target PDF extracted from `Nougat`\n",
     "\n",
     "This package uses `nougat`, a tool for extracting information from specific PDF files. It also includes a feature that uses OpenAI's language models to check the accuracy of this extracted information. Additionally, the package uses `uniflow` to create questions and answers based on the information taken from the PDFs.\n",
     "\n",
