compared with original branch, fixed typo

--- a/example/transform/openai_jupyter_notebook_QA.ipynb
+++ b/example/transform/openai_jupyter_notebook_QA.ipynb
@@ -164,7 +164,7 @@
     "        # Check if the string starts with \"'markdown' cell: '\"\n",
     "        if s.startswith(markdown_symbol):\n",
     "            # Split the string by the specified pattern ', '\n",
-    "            parts = re.split(\"', '\" , s)\n",
+    "            parts = re.split(\"\"\"', '\"\"\" , s)\n",
     "\n",
     "            # Process each part\n",
     "            new_list = []\n",
@@ -184,7 +184,7 @@
     "            # Add the processed parts to the main list\n",
     "            processed.extend(new_list)\n",
     "\n",
-    "        # For strings starting with \"'code' cell\", append them to the last string\n",
+    "        # For strings starting with \"\"\"'code' cell\"\"\", append them to the last string\n",
     "        elif s.startswith(code_symbol):\n",
     "            processed[-1] += s\n",
     "        else:\n",
@@ -280,8 +280,8 @@
     }
    ],
    "source": [
-    "markdown_symbol = \"\\'markdown\\' cell: \\'\"\n",
-    "code_symbol = \"\\'code\\' cell: \\'\"\n",
+    "markdown_symbol = \"\"\"\\'markdown\\' cell: \\'\"\"\"\n",
+    "code_symbol = \"\"\"\\'code\\' cell: \\'\"\"\"\n",
     "content_splited_by_header =  split_string_based_on_markdown_header(raw_content[0].page_content,\n",
     "                                               markdown_symbol=markdown_symbol,\n",
     "                                               code_symbol=code_symbol)\n",
@@ -305,18 +305,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "guided_prompt = PromptTemplate(\n",
-    "    instruction=\"\"\"If there is a code cell, generate one question given the markdown cell and its corresponding \\\n",
+    "instruction=\"\"\"If there is a code cell, generate one question given the markdown cell and its corresponding \\\n",
     "answer based on code cell and its output. If there is no code cell, generate one question and its corresponding \\\n",
     "answer based on context. Following the format of the examples below to include the same context, question, and \\\n",
-    "answer in the response.\"\"\",\n",
+    "answer in the response.\"\"\"\n",
+    "\n",
+    "context=\"\"\"'markdown' cell: '['### Use LLM to generate data in Uniflow. \\\n",
+    "In this example, we use the base `Config` defaults with the [OpenAIModelConfig] to generate questions and answers.']' \\\n",
+    "'code' cell: '['config = Config(model_config=OpenAIModelConfig())', 'client = Client(config)']'\"\"\"\n",
+    "question=\"\"\"How to use LLM to generate data in Uniflow\"\"\"\n",
+    "answer=\"\"\"We can use the Uniflow's default [OpenAIModelConfig] to generate questions and answers with \\\n",
+    "code: '['config = Config(model_config=OpenAIModelConfig())', 'client = Client(config)']'\"\"\"\n",
+    "\n",
+    "guided_prompt = PromptTemplate(\n",
+    "    instruction=instruction,\n",
     "    few_shot_prompt=[\n",
     "        Context(\n",
-    "            context=\"\"\"'markdown' cell: '['### Use LLM to generate data in Uniflow. \\\n",
-    "In this example, we use the base `Config` defaults with the [OpenAIModelConfig] to generate questions and answers.']' \\\n",
-    "'code' cell: '['config = Config(model_config=OpenAIModelConfig())', 'client = Client(config)']'\"\"\",\n",
-    "            question=\"\"\"How to use LLM to generate data in Uniflow\"\"\",\n",
-    "            answer=\"\"\"We can use the Uniflow's default [OpenAIModelConfig] to generate questions and answers with code: '['config = Config(model_config=OpenAIModelConfig())', 'client = Client(config)']'\"\"\",\n",
+    "            context=context,\n",
+    "            question=question,\n",
+    "            answer=answer,\n",
     "        )\n",
     "    ]\n",
     ")"
