--- a/example/transform/self_instruct_html_source.ipynb
+++ b/example/transform/self_instruct_html_source.ipynb
@@ -305,7 +305,7 @@
     "\n",
     "prompt_keys = [\n",
     "    \"question\",\n",
-    "    \"answer\"\n",
+    "    \"answer\",\n",
     "]\n",
     "\n",
     "for item in output:\n",
