--- a/example/transform/self_instruct_pdf_source.ipynb
+++ b/example/transform/self_instruct_pdf_source.ipynb
@@ -130,9 +130,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "instruction=\"\"\"Generate one question and its corresponding answer based on the context. Following the format of the examples below to include the same context, question, and answer in the response.\"\"\"\n",
+    "instruction=\"\"\"Generate one question and its corresponding answer based on the context. \\\n",
+    "Following the format of the examples below to include the same context, question, and answer in the response.\"\"\"\n",
     "\n",
-    "context=\"\"\"In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.\"\"\"\n",
+    "context=\"\"\"In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) \\\n",
+    "establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy \\\n",
+    "for the first time. We will begin our journey here.\"\"\"\n",
     "question=\"\"\"Who published A Mathematical Theory of Communication in 1948?\"\"\"\n",
     "answer=\"\"\"Claude E. Shannon.\"\"\"\n",
     "\n",
